--- a/images/lb/templates/motd.j2
+++ b/images/lb/templates/motd.j2
@@ -3,11 +3,10 @@ echo "\n"
 export TERM=xterm-256color
 export LANG="en_US.UTF-8"
 # For reasons I do not understand the maxium number of lines in this file is 22
-head -n 22 /etc/update-motd.d/{{ logo }}.ansi
+head -n 22 /etc/update-motd.d/shiva.ansi
 echo "\n"
-echo "City Host: $(hostname)"
+echo "Load Balancer Host: $(hostname)"
 echo "-- $(tput setaf 7)$(uname -a)/$(uname -r)/$(uname -m)"
 echo "-- $(grep -m1 "^model name" /proc/cpuinfo | sed -e "s/.*: //" -e "s:\s\+:/:g")"
 echo "-- Logging is enabled on this machine $(cat /proc/uptime)"
-echo "-- $(tput setaf 1)DO NOT RUN USER WORKLOADS ON CITY HOSTS!"
 echo "$(tput sgr0)"
